# ABCtoolbox

./: .gitignore  CMakeLists.txt  README.md  VERSION
scripts/: plotPosteriorsGLM.r
source/ABCestimator/: CMakeLists.txt  TSimData.cpp
source/ABCsampler/: ABCsampler.cpp  CMakeLists.txt  TExecuteProgram.cpp  TExecuteProgram.h  TInputFile.cpp  TInputFileVector.cpp  TSim.cpp
source/cumuldens/: CMakeLists.txt
source/glm/: CMakeLists.txt
source/linearTransformer/: CMakeLists.txt
source/strStats/: CMakeLists.txt  TPopData.cpp  TPopData.h
